added public and html folders

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Mysia",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.12"
   },
   "devDependencies": {},
   "repository": {
